@@ -1,3 +1,13 @@
+2007-10-12  Michael Riepe  <too-tired@users.sourceforge.net>
+
+	* src/settings.cpp:
+	* src/settings.h:
+		Do not load settings until they are needed.
+
+	* src/dvbcut.cpp:
+	* src/eventlistitem.cpp:
+		Use new settings interface.
+ 
 2007-10-11  Michael Riepe  <too-tired@users.sourceforge.net>
 
 	* src/dvbcutbase.ui:
